--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -5,3 +5,10 @@ $small-breakpoint-width: 720px;
 /* For desktop, the content should be aligned with the page title. */
 $content-padding-side: 70px;
 $content-padding-side-xs: 15px;
+
+$font-grey: #696969;
+$bg-grey: #F8F8F8;
+$orange: #FF9933;
+$red: #FF3333;
+$yellow: #FFC02E;
+$green: #9CD020;
