add custom right menu feature

--- a/libs/components/header/demo/header-basic.component.html
+++ b/libs/components/header/demo/header-basic.component.html
@@ -2,6 +2,7 @@
             [userName]='userName'
             [brandLink]='brandLink' 
             [svgIcon]='svgIcon'
+            [vizType]='vizType'
             (rightBtnClick)='rightBtnOnClick()'
             (hamburgerClick)='hamburgerOnClick()'>
 </viz-header>
