--- a/libs/components/header/viz-header.component.html
+++ b/libs/components/header/viz-header.component.html
@@ -8,7 +8,7 @@
         </a>
       </span>
     </div>
-    <div class="navbar-right">
+    <div class="navbar-right" *ngIf="vizType === 'primary'">
       <div class="navbar-welcome" (click)='rightBtnOnClick()'>
         <span>Welcome, {{userName}}</span>
         <mat-icon>{{isDrop? "arrow_drop_up":"arrow_drop_down"}}</mat-icon>
@@ -19,5 +19,6 @@
         <span class="icon-bar"></span>
       </div>
     </div>
+    <ng-content *ngIf="vizType === 'rightMenu'"></ng-content>
   </div>
 </header>
