--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
+<viz-header 
+  [title]='"toolkit"'
+  [brandLink]='"/"' 
+  [type]='rightMenu'
+>
+</viz-header>
 <router-outlet></router-outlet>
 
