fix header style

--- a/libs/components/header/demo/header-basic.component.html
+++ b/libs/components/header/demo/header-basic.component.html
@@ -2,7 +2,7 @@
             [userName]='userName'
             [brandLink]='brandLink' 
             [svgIcon]='svgIcon'
-            [vizType]='vizType'
+            [type]='vizType'
             (rightBtnClick)='rightBtnOnClick()'
             (hamburgerClick)='hamburgerOnClick()'>
 </viz-header>
