--- a/libs/components/header/viz-header.component.scss
+++ b/libs/components/header/viz-header.component.scss
@@ -6,7 +6,8 @@
     background: #ffffff;
     z-index: 10;
     box-shadow: 0 1px 0 0 #e9e9e9;
-  
+    padding: 0 15px;
+
     .navbar-wrapper {
       display: flex;
       height: 72px;
@@ -51,6 +52,7 @@
       .navbar-right {
         margin-right: 0px;
       }
+      padding: 0 40px;
     }
     .navbar-right {
       display: flex;
