1. Add Viz-Select Components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,5 +36,6 @@
   </nav>
 </viz-header>
 <viz-app-date-range-picker></viz-app-date-range-picker>
+<viz-select [options]="options" placeholder='Select Component'></viz-select>
 <router-outlet></router-outlet>
 
