--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,14 +19,14 @@
       <span class="tab-item">PRINCIPLES</span>
     </a>
     <a mat-tab-link
-      routerLink="/components/button/overview"
+      routerLink="/components"
       routerLinkActive 
       #rla3="routerLinkActive"
       [active]="rla3.isActive">
       <span class="tab-item">COMPONENTS</span>
     </a>
     <a mat-tab-link
-      routerLink="/documentation"
+      routerLink="/documentation/button/overview"
       routerLinkActive 
       #rla4="routerLinkActive"
       [active]="rla4.isActive">
