--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,7 @@
     border-bottom: none;
     ::ng-deep {
       .mat-tab-links {
+        align-items: center;
         height: 100%;
         .mat-tab-link {
           height: 100%;
