--- a/libs/components/header/viz-header.component.scss
+++ b/libs/components/header/viz-header.component.scss
@@ -47,6 +47,11 @@
           }
         }
       }
+      @media (max-width: 991px) { 
+        .navbar-Menu {
+          display: none
+        }
+      }
     }
     @media (min-width: 768px) {
       .navbar-right {
