homepage svg animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
 >
   <nav mat-tab-nav-bar class='detail-navigator pc-header'>
     <a mat-tab-link
-      routerLink="/toolkit"
+      routerLink="/"
       routerLinkActive 
       #rla1="routerLinkActive"
-      [active]="rla1.isActive">
+      [active]="!rla2.isActive && !rla3.isActive && !rla4.isActive && rla1.isActive">
       <span class="tab-item">TOOLKIT</span>
     </a>
     <a mat-tab-link
