--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
         align-items: center;
         height: 100%;
         .mat-tab-link {
-          height: 100%;
+          height: 72px;
           font-size: 13px;
           padding: 0 0 0 0;
           margin-right: 30px;
