--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -1,101 +1,105 @@
 :host {
-  .home-sec-1 {
-    display: flex;
-    justify-content: space-around;
-    padding: 50px 100px;
-    .text-item {
-      padding-top: 50px;
-      width: 50%;
-      max-width: 500px;
-      h1 {
-        margin: 20px 0 10px 0;
-        font-weight: 300;
-        font-size: 48px;
-        line-height: 1.3;
+  .home-wrapper {
+    display: block;
+    min-height: calc(100vh - 146px);
+    .home-sec-1 {
+      display: flex;
+      justify-content: space-around;
+      padding: 50px 100px;
+      .text-item {
+        padding-top: 50px;
+        width: 50%;
+        max-width: 500px;
+        h1 {
+          margin: 20px 0 10px 0;
+          font-weight: 300;
+          font-size: 48px;
+          line-height: 1.3;
+        }
+        %normal-font {
+          font-size: 20px;
+          font-weight: 200;
+          color: #696969;
+          line-height: 1.5;
+        }
+        p {
+          @extend %normal-font;
+          margin: 0 0 10px;
+        }
+        .button-sec {
+          @extend %normal-font;
+          
+          margin-top: 30px;
+        }
       }
-      %normal-font {
-        font-size: 20px;
-        font-weight: 200;
-        color: #696969;
-        line-height: 1.5;
-      }
-      p {
-        @extend %normal-font;
-        margin: 0 0 10px;
-      }
-      .button-sec {
-        @extend %normal-font;
-        
-        margin-top: 30px;
+      .svg-item {
+        max-width: 555px;
+        width: 50%;
       }
     }
-    .svg-item {
-      max-width: 555px;
-      width: 50%;
-    }
-  }
-  .home-sec-2 {
-    display: flex;
-    justify-content: space-around;
-    border-top: 1px solid #f8f8f8;
-    margin: 0 100px;
-    padding: 50px 0;
-    &>div {
-      width: 360px;
-      .docs-feature-thumb {
-        width: 96px;
-        position: relative;
-        height: 96px;
-        %box-size {
-          height: 96px;
+    .home-sec-2 {
+      display: flex;
+      justify-content: space-around;
+      border-top: 1px solid #f8f8f8;
+      margin: 0 100px;
+      padding: 50px 0;
+      &>div {
+        width: 360px;
+        .docs-feature-thumb {
           width: 96px;
-        }
-        &>div, &>img {
-          position: absolute;
-          top: 0;
-          left: 0;
-        }
-        &>div {
-          z-index: 2;
-          opacity: 0;
-          transition: opacity .3s ease-in-out;
-          @extend %box-size;
-          &>svg {
-            height: 100%;
-            width: 100%;
+          position: relative;
+          height: 96px;
+          %box-size {
+            height: 96px;
+            width: 96px;
           }
-          &#standarts {
-            top: -15px;
-            left: -20px;
-            height: 127px;
-            width: 137px;
+          &>div, &>img {
+            position: absolute;
+            top: 0;
+            left: 0;
           }
+          &>div {
+            z-index: 2;
+            opacity: 0;
+            transition: opacity .3s ease-in-out;
+            @extend %box-size;
+            &>svg {
+              height: 100%;
+              width: 100%;
+            }
+            &#standarts {
+              top: -15px;
+              left: -20px;
+              height: 127px;
+              width: 137px;
+            }
+          }
+          &>img {
+            @extend %box-size;
+            opacity: 1;
+            display: block;
+            z-index: 1;
+          }
+          &:hover>div {
+            opacity: 1;
+          }
+          // &:hover>img {
+          //   opacity: 0;
+          // }
+          
         }
-        &>img {
-          @extend %box-size;
-          opacity: 1;
-          display: block;
-          z-index: 1;
+        h3 {
+          font-size: 28px;
+          font-weight: 200;
+          margin-top: 20px;
+          margin-bottom: 10px;
         }
-        &:hover>div {
-          opacity: 1;
+        p {
+          margin-top: 0;
+          font-size: 16px;
+          font-weight: 200;
+          color: #696969;
         }
-        // &:hover>img {
-        //   opacity: 0;
-        // }
-        
-      }
-      h3 {
-        font-size: 28px;
-        font-weight: 200;
-        margin-top: 20px;
-        margin-bottom: 10px;
-      }
-      p {
-        margin-top: 0;
-        font-size: 16px;
-        font-weight: 200;
-        color: #696969;
       }
     }
   }
