--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,5 +35,7 @@
     <a mat-button color="primary" target="_blank" class="github-link" routerLink="https://github.com/greycats/vizient-toolkit">VIEW ON GITHUB</a>
   </nav>
 </viz-header>
-<router-outlet></router-outlet>
+<div class="main-sec">
+    <router-outlet></router-outlet>
+</div>
 <viz-footer [brands] = "options"></viz-footer>
