--- a/src/app/pages/component-sidenav/component-sidenav.html
+++ b/src/app/pages/component-sidenav/component-sidenav.html
@@ -1,4 +1,7 @@
-<p>
-  component-sidenav works!
-</p>
-<router-outlet></router-outlet>
+<div class="documentation-nav">
+
+</div>
+<div class="documentation-main">
+  <router-outlet></router-outlet>
+</div>
+
