--- a/src/assets/examples/button-basic/button-basic.component.html
+++ b/src/assets/examples/button-basic/button-basic.component.html
@@ -1,3 +1,3 @@
-<viz-button type="primary"></viz-button>
-<viz-button type="stroked"></viz-button>
-<viz-button></viz-button>
+<button mat-raised-button color="primary">primary</button>
+<button mat-stroked-button color="stroked">stroked</button>
+<button mat-button>default</button>
