--- a/src/assets/examples/button-basic/button-basic.component.html
+++ b/src/assets/examples/button-basic/button-basic.component.html
@@ -1,3 +1,3 @@
 <button mat-raised-button color="primary">primary</button>
-<button mat-stroked-button color="stroked">stroked</button>
-<button mat-button>default</button>
+<button mat-stroked-button color="primary">stroked</button>
+<button mat-button color="primary">default</button>
