--- a/src/assets/examples/checkbox-basic/checkbox-basic.component.html
+++ b/src/assets/examples/checkbox-basic/checkbox-basic.component.html
@@ -1,1 +1,6 @@
-<viz-checkbox>Hello</viz-checkbox>
+<!-- <viz-checkbox>Hello</viz-checkbox> -->
+
+
+<mat-checkbox checked=true>Checked</mat-checkbox>
+<mat-checkbox [indeterminate]=true>Indetermine</mat-checkbox>
+<mat-checkbox>Unchecked</mat-checkbox>
