--- a/src/assets/examples/menu-basic/menu-basic.component.html
+++ b/src/assets/examples/menu-basic/menu-basic.component.html
@@ -1,1 +1,5 @@
-<viz-menu [menuList]="menuList"></viz-menu>
+<button mat-button [matMenuTriggerFor]="menu">Menu</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>Item 1</button>
+  <button mat-menu-item>Item 2</button>
+</mat-menu>
