--- a/libs/components/menu/viz-menu.component.html
+++ b/libs/components/menu/viz-menu.component.html
@@ -1,2 +1,2 @@
-<button mat-button [matMenuTriggerFor]="menu.childMenu">{{menuList.name}}</button>
-<viz-menu-cell #menu [list]="menuList.children"></viz-menu-cell>
+<button mat-button [matMenuTriggerFor]="menu.childMenu">{{list.name}}</button>
+<viz-menu-cell #menu [list]="list.children"></viz-menu-cell>
