--- a/src/assets/examples/menu-basic/menu-basic.component.html
+++ b/src/assets/examples/menu-basic/menu-basic.component.html
@@ -1,5 +1,5 @@
 <button mat-button [matMenuTriggerFor]="menu">Menu</button>
-<mat-menu #menu="matMenu">
+<mat-menu #menu="matMenu" class="viz-menu">
   <button mat-menu-item>Item 1</button>
   <button mat-menu-item>Item 2</button>
 </mat-menu>
