--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import '../libs/style.scss';
+
 /* You can add global styles to this file, and also import other style files */
 @import 'styles/material-dark.scss';
 @font-face {
