1.Add Toolkit global scss

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -1,6 +1,5 @@
-.viz-menu {
-  &.mat-menu-panel {
-    max-width: none;
-    width: 280px;
+.cdk-overlay-pane{
+  .mat-menu-panel{
+    background-color: red
   }
 }
