--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import '../libs/style.css';
+@import '../libs/style.scss';
 
 /* You can add global styles to this file, and also import other style files */
 @import 'styles/material-dark.scss';
