--- a/libs/style.scss
+++ b/libs/style.scss
@@ -216,7 +216,7 @@ td.mat-cell, .mat-header-cell {
 .mat-button-wrapper {
   font-weight: 300 !important;
 }
-
+//menu style
 .cdk-overlay-pane {
   .mat-menu-panel {
     .mat-menu-content {
@@ -237,4 +237,26 @@ td.mat-cell, .mat-header-cell {
       }
     }
   }
+}
+//list style
+.mat-list{
+  padding-top: 0px;
+  .mat-list-item{
+    background-color: #ffffff;
+    border-bottom: 1px solid gray;
+    &:first-child{
+      border-top: 1px solid gray;
+    }
+  }
+}
+//chip style
+.mat-chip{
+  &.mat-standard-chip{
+    border-radius: 0px;
+    &.mat-chip-selected.mat-primary{
+      background-color: #e0e0e0 !important;
+      color: #7f5eba !important;
+    }
+  }
+  
 }
