1. Add Component Desciption to checkbox

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 @import '../libs/style.scss';
+/* document.scss */
+@import './document.scss';
 
 /* You can add global styles to this file, and also import other style files */
 @import 'styles/material-dark.scss';
