--- a/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/src/app/pages/component-sidenav/component-sidenav.scss
@@ -8,10 +8,11 @@
     box-sizing: border-box;
   }
   .documentation-main {
-    width: calc(100vw - 304px);
+    width: calc(100vw - 318px);
     float: left;
     min-height: 100%;
-    padding: 50px 50px;
+    // padding: 50px 50px;
+    padding: 56px 48px;
     overflow: auto;
     box-sizing: border-box;
   }
