--- a/src/app/pages/component-viewer/component-viewer.scss
+++ b/src/app/pages/component-viewer/component-viewer.scss
@@ -58,7 +58,7 @@ app-component-viewer {
 .docs-component-api,
 .docs-component-overview {
   width: 80%;
-  display: inline-flex;
+  // display: inline-flex;
 
   @media (max-width: $small-breakpoint-width) {
     width: 100%;
