--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -1,4 +1,124 @@
-<html><head></head><body>
-    <h1>Checkbox</h1>
+<html>
+
+<head></head>
+
+<body>
+  <div class="doc-category-title">
+    Form Control
+  </div>
+  <div class="doc-title-1">
+    Checkbox
+  </div>
+  <div class="doc-desc-1">
+    Checkboxes allow the user to select one or more items from a set. Checkboxes can be used to turn an option on or off.
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+  <div class="doc-title-2">
+    Example
+  </div>
+
+  <div class="doc-desc-2">
+    Use in forms to toggle the state of something on or off.
+  </div>
+
+  <div class="doc-example-container">
     <div app-docs-example="checkbox-basic"></div>
-  </body></html>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+  <div class="doc-title-2">
+    Props
+  </div>
+
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>checked</td>
+        <td>Specifies whether the checkbox is selected</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of checkbox</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="doc-divider">
+
+  </div>
+
+  <div class="doc-title-2">
+    Best Practice
+  </div>
+
+  <div class="doc-desc-2">
+    Use checkboxes to:
+    <ul class="doc-list">
+      <li>Select one or multiple items from a list</li>
+      <li>Present a list containing sub-selections</li>
+      <li>Turn an option on or off</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+
+  <div class="doc-title-2">
+    Usage & Content guidelines
+  </div>
+
+  <div class="doc-desc-2">
+    Start with a capital letter
+  </div>
+
+  <div>I am example pic 1</div>
+
+  <div class="doc-desc-2">
+    Avoid using button toggles for a list of options
+  </div>
+
+  <div>I am example pic 1</div>
+
+  <div class="doc-divider">
+
+  </div>
+
+  <div class="doc-title-2">
+    Design specs
+  </div>
+
+  <div> I am Design specs picture</div>
+
+
+  <div class="doc-divider">
+
+  </div>
+</body>
+
+</html>
