--- a/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/src/app/pages/component-sidenav/component-sidenav.scss
@@ -2,14 +2,46 @@
 :host {
   .documentation-nav {
     width: 304px;
-    float: left;
+    position: absolute;
+    top:0;
+    left: 0;
+    height: 100%;
     min-height: $contentHeight;
     box-shadow: 1px 0 0 0 #e9e9e9;
     box-sizing: border-box;
+    overflow-y: auto;
+    .nav-sec {
+      padding: 35px 30px;
+      &:not(:first-child) {
+        border-top: 1px solid #F1F1F1;
+      }
+      p {
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+      .nav-title {
+        font-size: 16px;
+        color: black;
+      }
+      .nav-sub-title {
+        margin-top: 20px;
+        color: $font-grey;
+        font-size: 14px;
+        font-weight: 300;
+        cursor: pointer;
+        &:focus {
+          outline: none;
+        }
+        &.active {
+          color: black;
+          font-weight: 500;
+        }
+      }
+    }
   }
   .documentation-main {
     width: calc(100vw - 318px);
-    float: left;
+    margin-left: 304px;
     min-height: 100%;
     // padding: 50px 50px;
     padding: 56px 48px;
