--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import '../libs/style.scss';
 /* document.scss */
 @import './document.scss';
+@import './styles/_constants';
 
 /* You can add global styles to this file, and also import other style files */
 @import 'styles/material-dark.scss';
@@ -42,4 +43,5 @@
 body {
   margin: 0 0 0 0;
   font-family: "Soleto", Arial, sans-serif;
+  color: $font-grey;
 }
