1. Add badge desc 2. Add button desc 3. Add checkbox desc 4. Add chip desc 5. datepicker desc

--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -1,4 +1,131 @@
-<html><head></head><body>
-  <h1>Badge</h1>
-  <div app-docs-example="badge-basic"></div>
-</body></html>
+<html>
+
+<head></head>
+
+<body>
+  <div class="doc-category-title">
+    Button & Indicatiors
+  </div>
+  <div class="doc-title-1">
+    Badge
+  </div>
+  <div class="doc-desc-1">
+    Badges are small status descriptors for UI elements. A badge consists of a small circle, typically containing a number or
+    other short set of characters, that appears in proximity to another object.
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Example
+  </div>
+  <div class="doc-desc-2">
+    Examples of badges containing text, using primary and secondary colors. The badge is applied to its children.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="badge-basic"></div>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>ghost</td>
+        <td>make background transparent and invert text and border colors</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of button</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practice
+  </div>
+
+  <div class="doc-desc-2">
+    Badges should:
+    <ul class="doc-list">
+      <li>Use established and right colors appropriately in each case.</li>
+      <li>Be positioned in consistent locations in the interface. The badge should always be close to the element that it supports</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+
+  <div class="doc-title-2">
+    Usage & Content guidelines
+  </div>
+  <div class="doc-desc-2">
+    Badge should not block the over elements it support. Bagde should always stay on top and on the right of the main elements.
+  </div>
+  <div style="margin-bottom:24px">
+    <img class="checkbox-usage"
+         src="assets/img/doc/badge-pic-1.png"
+         alt="">
+    <img class="checkbox-usage"
+         src="assets/img/doc/badge-pic-2.png"
+         alt="">
+  </div>
+  <div class="doc-desc-2">
+    Do not add shadow to the badge.
+  </div>
+  <div style="margin-bottom:24px">
+    <img src="assets/img/doc/badge-pic-3.png"
+         class="checkbox-usage"
+         alt="">
+    <img src="assets/img/doc/badge-pic-4.png"
+         class="checkbox-usage"
+         style="margin-left:24px"
+         alt="">
+  </div>
+  <div class="doc-desc-2">
+    Do not use the same color as the main elements.
+  </div>
+  <div style="margin-bottom:24px">
+    <img src="assets/img/doc/badge-pic-5.png"
+         class="checkbox-usage"
+         alt="">
+    <img src="assets/img/doc/badge-pic-6.png"
+         class="checkbox-usage"
+         style="margin-left:24px"
+         alt="">
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Design specs
+  </div>
+
+  <img class="doc-spec"
+       src="assets/img/doc/badge-spec.png"
+       alt="">
+
+
+  <div class="doc-divider">
+
+  </div>
+</body>
+
+
+</html>
