--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -12,36 +12,26 @@
   <div class="doc-desc-1">
     Checkboxes allow the user to select one or more items from a set. Checkboxes can be used to turn an option on or off.
   </div>
-
   <div class="doc-divider">
-
   </div>
-
   <div class="doc-title-2">
     Example
   </div>
-
   <div class="doc-desc-2">
     Use in forms to toggle the state of something on or off.
   </div>
-
   <div class="doc-example-container">
     <div app-docs-example="checkbox-basic"></div>
   </div>
-
   <div class="doc-divider">
-
   </div>
-
   <div class="doc-title-2">
     Props
   </div>
-
   <div class="doc-desc-2">
     To get a customized checkbox, just set
     <span class="doc-desc-2-highlight">type/state/disabled</span>
   </div>
-
   <table class="doc-props-table">
     <thead>
       <tr>
@@ -66,11 +56,7 @@
       </tr>
     </tbody>
   </table>
-
-  <div class="doc-divider">
-
-  </div>
-
+  <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practice
   </div>
@@ -97,13 +83,29 @@
     Start with a capital letter
   </div>
 
-  <div>I am example pic 1</div>
+  <div style="margin-bottom:24px">
+    <img class="checkbox-usage"
+         src="assets/img/doc/checkbox-capital-ok.png"
+         alt="">
+    <img class="checkbox-usage"
+         src="assets/img/doc/checkbox-capital-fail.png"
+         alt="">
+  </div>
+
 
   <div class="doc-desc-2">
     Avoid using button toggles for a list of options
   </div>
 
-  <div>I am example pic 1</div>
+  <div style="margin-bottom:24px">
+    <img src="assets/img/doc/checkbox-list-do.png"
+         class="checkbox-usage"
+         alt="">
+    <img src="assets/img/doc/checkbox-list-dont.png"
+         class="checkbox-usage"
+         style="margin-left:24px"
+         alt="">
+  </div>
 
   <div class="doc-divider">
 
@@ -113,7 +115,8 @@
     Design specs
   </div>
 
-  <div> I am Design specs picture</div>
+  <img src="assets/img/doc/checkbox-design.svg"
+       alt="">
 
 
   <div class="doc-divider">
