--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -1,4 +1,120 @@
-<html><head></head><body>
-    <h1>Chip</h1>
+<html>
+
+<head></head>
+
+<body>
+  <div class="doc-category-title">
+    Button & Indicatiors
+  </div>
+  <div class="doc-title-1">
+    Chip
+  </div>
+  <div class="doc-desc-1">
+    Chips are compact elements that represent an input, attribute, or action.
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Examples
+  </div>
+  <div class="doc-desc-2">
+    Chip displays a list of values as individual, keyboard accessible
+  </div>
+  <div class="doc-example-container">
     <div app-docs-example="chip-basic"></div>
-  </body></html>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>ghost</td>
+        <td>make background transparent and invert text and border colors</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of button</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practice
+  </div>
+
+  <div class="doc-desc-2">
+    Chips allow users to enter information, make selections, filter content, or trigger actions:
+    <ul class="doc-list">
+      <li>Compact: Chips are compact components that represent discrete information.</li>
+      <li>Relevant: Chips should have a clear and helpful relationship to the content or task they represent</li>
+      <li>Focused: Chips should make tasks easier to complete, or content easier to sort.</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+
+  <div class="doc-title-2">
+    Usage & Content guidelines
+  </div>
+  <div class="doc-desc-2">
+    Choice chips shouldn’t present only a single option.
+  </div>
+  <div style="margin-bottom:24px">
+    <img class="checkbox-usage"
+         src="assets/img/doc/chip-list-do.png"
+         alt="">
+    <img class="checkbox-usage"
+         src="assets/img/doc/chip-list-dont.png"
+         alt="">
+  </div>
+  <div class="doc-desc-2">
+    Horizontal placement of choice chips. Choice chips can wrap to a new row. However, using two or more rows of choice chips
+    can make each chip harder to scan.
+  </div>
+  <div style="margin-bottom:24px">
+    <img src="assets/img/doc/chip-horizatal-do.png"
+         class="guideline-pic-w100"
+         alt="">
+    <img src="assets/img/doc/chip-horizatal-dont.png"
+         class="guideline-pic-w100"
+         style="margin-top:24px"
+         alt="">
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Design specs
+  </div>
+
+  <img class="doc-spec"
+       src="assets/img/doc/chip-spec.png"
+       alt="">
+
+
+  <div class="doc-divider">
+
+  </div>
+</body>
+
+
+</html>
