--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -1,4 +1,105 @@
-<html><head></head><body>
-  <h1>DatePicker</h1>
-  <div app-docs-example="date-picker-basic"></div>
-</body></html>
+<html>
+
+<head></head>
+
+
+<body>
+  <div class="doc-category-title">
+    Form Controls
+  </div>
+  <div class="doc-title-1">
+    Datepicker
+  </div>
+  <div class="doc-desc-1">
+    Datepicker allow the user to enter a date or date range either through text input, or by choosing from the calendar.
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Example
+  </div>
+  <div class="doc-desc-2">
+    Use in forms to let user enter a date or date range.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="date-picker-basic"></div>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>checked</td>
+        <td>Specifies whether the checkbox is selected</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of checkbox</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practice
+  </div>
+
+  <div class="doc-desc-2">
+    Datepicker should:
+    <ul class="doc-list">
+      <li>Allowe user to input a date or date range.</li>
+      <li>Be inputed through text input, or by choosing date from calendar.</li>
+      <li>Always display current date.</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider"></div>
+
+  <div class="doc-title-2">
+    Usage & Content guidelines
+  </div>
+  <div class="doc-desc-2">
+    Always disable the date that user cannot interact with.
+  </div>
+  <div style="margin-bottom:24px">
+    <img class="datepicker-usage"
+         src="assets/img/doc/datepicker-disable-do.png"
+         alt="">
+    <img class="datepicker-usage"
+         src="assets/img/doc/datepicker-disable-dont.png"
+         alt="">
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Design specs
+  </div>
+
+  <img class="datepicker-spec"
+       src="assets/img/doc/datepicker-spec.png"
+       alt="">
+
+
+  <div class="doc-divider">
+
+  </div>
+</body>
+
+
+</html>
