--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -1,4 +1,125 @@
-<html><head></head><body>
-  <h1>Button</h1>
-  <div app-docs-example="button-basic"></div>
-</body></html>
+<html>
+
+<head></head>
+
+<body>
+  <div class="doc-category-title">
+    Button & Indicatiors
+  </div>
+  <div class="doc-title-1">
+    Button
+  </div>
+  <div class="doc-desc-1">
+    Buttons make common actions immediately visible and easy to perform with one click or tap. They can be used for any type
+    of action, including navigation.
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Example
+  </div>
+  <div class="doc-desc-2">
+    Used most in the interface. Only use another style if a button requires more or less visual weight.
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-basic"></div>
+  </div>
+  <div class="doc-divider">
+  </div>
+  <div class="doc-title-2">
+    Props
+  </div>
+  <div class="doc-desc-2">
+    To get a customized checkbox, just set
+    <span class="doc-desc-2-highlight">type/state/disabled</span>
+  </div>
+  <table class="doc-props-table">
+    <thead>
+      <tr>
+        <th>property</th>
+        <th>description</th>
+        <th>type</th>
+        <th>default</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>ghost</td>
+        <td>make background transparent and invert text and border colors</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+      <tr>
+        <td>disabled</td>
+        <td>disabled state of button</td>
+        <td>boolean</td>
+        <td>false</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Best Practice
+  </div>
+
+  <div class="doc-desc-2">
+    Buttons should:
+    <ul class="doc-list">
+      <li>Be clearly and accurately labeled.</li>
+      <li>Lead with strong, actionable verbs.</li>
+      <li>Use established button colors appropriately. For example, only use a red button for an action that’s difficult or impossible
+        to undo.</li>
+      <li>Prioritize the most important actions. Too many calls to action can cause confusion and make merchants unsure of what
+        to do next.</li>
+      <li>Be positioned in consistent locations in the interface.</li>
+    </ul>
+  </div>
+
+  <div class="doc-divider">
+
+  </div>
+
+
+  <div class="doc-title-2">
+    Usage & Content guidelines
+  </div>
+  <div class="doc-desc-2">
+    Buttons should be clear and predictable—data analyst should be able to anticipate what will happen when they click a button.
+    Never deceive them by mislabeling a button.
+  </div>
+  <div style="margin-bottom:24px">
+    <img class="checkbox-usage"
+         src="assets/img/doc/button-predicable-do.png"
+         alt="">
+    <img class="checkbox-usage"
+         src="assets/img/doc/button-predicable-dont.png"
+         alt="">
+  </div>
+  <div class="doc-desc-2">
+    Don’t wrap text. For maximum legibility, a text label should remain on a single line.
+  </div>
+  <div style="margin-bottom:24px">
+    <img src="assets/img/doc/button-singleline-do.png"
+         class="checkbox-usage"
+         alt="">
+    <img src="assets/img/doc/button-singleline-dont.png"
+         class="checkbox-usage"
+         style="margin-left:24px"
+         alt="">
+  </div>
+  <div class="doc-divider"></div>
+  <div class="doc-title-2">
+    Design specs
+  </div>
+
+  <img class="doc-spec"
+       src="assets/img/doc/button-spec.png"
+       alt="">
+
+
+  <div class="doc-divider">
+
+  </div>
+</body>
+
+
+</html>
