add table content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,7 +29,7 @@
   }
   .main-sec {
     min-height: $contentHeight;
-    overflow: auto;//fix div collapse
+    // overflow: auto;//fix div collapse
     height: auto;
     position: relative;
   }
