--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -3,8 +3,9 @@
 <head></head>
 
 <body>
-  <div class="doc-category-title">
+  <div class="doc-category-title ">
     Form Control
+    <span class="docs-markdown-h3" id="contents"><span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
     Checkbox
@@ -18,7 +19,8 @@
   </div>
 
   <div class="doc-title-2">
-    Example
+    Examples
+    <span class="docs-markdown-h3" id="examples"><span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-desc-2">
@@ -35,6 +37,7 @@
 
   <div class="doc-title-2">
     Props
+    <span class="docs-markdown-h3" id="props"><span header-link="props"></span>Props</span>
   </div>
 
   <div class="doc-desc-2">
@@ -72,7 +75,8 @@
   </div>
 
   <div class="doc-title-2">
-    Best Practice
+    Best Practices
+    <span class="docs-markdown-h3" id="best_practices"><span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
@@ -91,6 +95,7 @@
 
   <div class="doc-title-2">
     Usage & Content guidelines
+    <span class="docs-markdown-h3" id="content_guidelines"><span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -111,6 +116,7 @@
 
   <div class="doc-title-2">
     Design specs
+    <span class="docs-markdown-h3" id="design_specs"><span header-link="design_specs"></span>Design specs</span>
   </div>
 
   <div> I am Design specs picture</div>
