--- a/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/src/app/pages/component-sidenav/component-sidenav.scss
@@ -45,7 +45,10 @@
     min-height: 100%;
     // padding: 50px 50px;
     padding: 56px 48px;
-    overflow: auto;
+    // overflow: auto;
     box-sizing: border-box;
+    position: relative;
+    -webkit-overflow-scrolling: touch;
+    display: block;
   }
 }
